--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,10 +115,13 @@ footer {
 }
 
 .galleryPage section > div {
+  padding-block: 2rem;
+  background-color: rgb(215, 245, 250);
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
 }
 .galleryPage section h4 {
   font-size: 1.5rem;
